syntax = "proto3";

option java_package = "kr.pik.message";

message RecruitPost {
  message JobGroup {
    string name = 1;
    string do = 2;
  }
  enum Category {
    PERFORMANCE = 0;
    EDUCATION = 1;
    DESIGN = 2;
    ROBOTICS = 3;
    COMICS = 4;
    MACHINE_LEARNING = 5;
    FOOD = 6;
    ANIMATION = 7;
    STUDY = 8;
    MUSIC = 9;
    JOURNALISM = 10;
    PUBLICATION = 11;
    FASHION = 12;
    ENVIRONMENT = 13;
    INFORMATION_TECHNOLOGY = 14;
    OTHER = 15;
  }
  enum ColorTag {
    ACTIVITY = 0;
    TECHNICAL = 1;
    ACADEMIC = 2;
    PUBLIC_INTEREST = 3;
    ARTISTIC = 4;
    MODERN = 5;
  }

  string content = 1;
  string projectName = 2;
  string projectPurpose = 3;
  string projectDuring = 4;
  Category category = 5;
  repeated ColorTag colorTags = 6;
  string pay = 7;
  string startDate = 8;
  string endDate = 9;
  JobGroup jobGroup = 10;
}